# psh

./: .gitignore  Cargo.toml  README.md  cli.pest
plugins/plugin-protos/: Cargo.toml  build.rs
plugins/plugin-protos/proto/: plugin.proto
plugins/plugin-protos/src/: lib.rs
plugins/prompt/: Cargo.toml
plugins/prompt/src/: lib.rs
protos/: Cargo.toml  build.rs
protos/proto/: env.proto  status.proto
protos/src/: lib.rs
psh/: Cargo.toml  cli.pest
psh/src/: command.rs  main.rs  plugins.rs  server.rs  shell.rs  state.rs
src/: builtins.rs  command.rs  main.rs  parser.rs  shell.rs  state.rs
utils/setenv/: Cargo.toml
utils/setenv/src/: main.rs
