[package]
name = "psh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
directories = "4.0.1"
once_cell = "1.15.0"
owo-colors = "3.5.0"
pest = "2.4.0"
pest_derive = "2.4.0"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
