[package]
name = "protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
prost = "0.11.0"
prost-types = "0.11.1"
tokio = { version = "1.21.2", features = ["net"] }
tonic = "0.8.2"
tower = "0.4.13"

[build-dependencies]
prost-build = "0.11.1"
tonic-build = { version = "0.8.2", default-features = false, features = ["transport", "prost"] }
