[package]
name = "psh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
directories = "4.0.1"
once_cell = "1.15.0"
owo-colors = "3.5.0"
pest = "2.4.0"
pest_derive = "2.4.0"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
protos = { path = "../protos" }
tonic = "0.8.2"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "net"] }
async-stream = "0.3.3"
tokio-stream = { version = "0.1.11", features = ["net"] }
async-recursion = "1.0.0"
nix = "0.25.0"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
