[package]
name = "prompt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
owo-colors = "3.5.0"
plugin-protos = { version = "0.1.0", path = "../plugin-protos" }
