[package]
name = "setenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
protos = { path = "../../protos" }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "net"] }
tonic = "0.8.2"
tower = "0.4.13"
